Refactor service name from 'iwtbg-backend' to 'iwtbg' in deployment files and update script versioning in index.html

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: iwtbg-backend
+    name: iwtbg
     runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: python server_production.py
